--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,11 @@
     tools:openDrawer="start"
     android:fitsSystemWindows="true">
 
+    <include layout="@layout/main_content"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"/>
+
+
     <com.google.android.material.navigation.NavigationView
         android:layout_width="match_parent"
         android:id = "@+id/nav_view"
