Neco lesson 11 Добавлен дополнительный экран с информацией при нажатии на List Item

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -8,10 +8,22 @@
         <item>Карась</item>
     </string-array>
     <string-array name="fish_content">
-        <item>Сом - крутая рыба</item>
-        <item>Налим - крутая рыба</item>
-        <item>Щука - крутая рыба</item>
-        <item>Карась - крутая рыба</item>
+        <item>    Рыба сом обладает длинным, сплющенным и довольно мощным телом, которое лишено чешуи и
+            покрыто слоем слизи, обеспечивающей скольжение и маневренность рыбы в водном пространстве.
+            Широкая голова сома обычно имеет уплощенную форму. На ней расположены небольшие, слегка
+            подслеповатые глаза сома. Усы сома - это важнейший осязательный орган, с помощью которого
+            рыб отыскивает пищу.</item>
+        <item>    Налим - единственный представитель семейства тресковых, преимущественно морских рыб,
+        который постоянно живет и размножается в пресных водах. Как правило, обитает налим в реках и
+        озерах с чистой и прозрачной водой и каменистым или песчаным дном.</item>
+        <item>    Щу́ка, или обыкнове́нная щу́ка (лат. Esox lucius), — рыба семейства щуковых.
+            Распространена в пресных водах Евразии,и Северной Америки. Живёт обычно в прибрежной
+            зоне, в водных зарослях, в непроточных или слабопроточных водах.</item>
+        <item>    Караси — неприхотливые промысловые рыбы, и ценный объект прудового хозяйства благодаря
+            способности выживать при низком (до 2—3 мг/л) содержании кислорода в воде. Спинной
+            плавник длинный, глоточные зубы однорядные. Тело высокое с толстой спиной, умеренно
+            сжатое с боков. Чешуя крупная и гладкая на ощупь. Окраска варьирует в зависимости от
+            места обитания.</item>
     </string-array>
     <array name="fish_image_array">
         <item>@drawable/som</item>
