Neco lesson 12 После нажатия на кнопку на выдвижной панели - она автоматически закрывается; добавлена возможность скроллить (ScrollView) если текст выходит за экран; Добавлены разделы на панели (основной и разное); на начальном экране виден не весь контент (первые 100 символов)

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -33,12 +33,47 @@
     </array>
 
     <string-array name="na_fish">
-        <item>naСом</item>
-        <item>naНалим</item>
+        <item>Наживки на сома</item>
+        <item>Наживки на налима</item>
     </string-array>
     <string-array name="na_fish_content">
-        <item>naСом - крутая рыба</item>
-        <item>naНалим - крутая рыба</item>
+        <item>Этот хищник не признает соседства и выбирает самые глубокие участки водоема, обычно
+            это средние и крупные реки с достаточно сильным течением, а также водохранилища. Чаще
+            всего его можно найти:  в завалах коряг; под обрывистым берегом на большой глубине; на
+            углублениях русла реки; рядом с омутами и водоворотами; недалеко от гидротехнических
+            сооружений. Искать сома на течении или ровных участках донного рельефа нет смысла, но и
+            на самой яме ловить тоже не стоит — нужно выбирать участки вблизи них. Собственное
+            логово кэтфиш покидает нечасто. Обычно это сумерки и ночное время, когда он доплывает до
+            ближайшей отмели, где стоит мелкая рыба, или теплый день весной и летом, чтобы погреться
+            на солнце. Стоит помнить, что гигант теплолюбив и активничает при температуре воды не
+            ниже 10–12 градусов и ночной температуре воздуха от 10 градусов. Холод вводит сома в
+            состояние оцепенения, поэтому за ним стоит отправляться не раньше конца весны, когда
+            погода стабилизировалась. При других условиях рассчитывать на поклевки не имеет смысла.
+            Чтобы безошибочно находить сомовьи ямы, а также места скопления кормовой белой рыбы,
+            рекомендуем пользоваться эхолотом. \n
+            Как все пресноводные хищники, сом питается животной пищей, но явных предпочтений,
+            которые могли бы сделать одну насадку или приманку универсальной, нет. Поэтому нужно
+            экспериментировать и подбирать оптимальный вариант для ваших условий ловли. На что
+            ловить сома: Активные живые насадки. Для ловли сома на живца используют различных рыб —
+            чехонь, плотву, язя и даже щук — и лягушек. Главное — не мельчить: кэтфиш вряд ли
+            обратит внимание на приманку весом менее 250 г.  Пассивные наживки. Сюда относятся
+            крупные насекомые — саранча, медведка, майский жук, — пучки гусениц и червей, раки,
+            моллюски, мясная и рыбная нарезка, как свежая, так и слегка протухшая. Можно ловить сома
+            на потроха и мышей. Искусственные приманки. Наиболее эффективны глубинные воблеры длиной
+            от 10 см, свимбейты, крупные силиконовые приманки, оснащенные тяжелыми джиг-головками,
+            «вертушки» при ловле троллингом и «колебалки».
+        </item>
+        <item>Самыми распространенными наживками, дающими не плохие результаты, по ловле этой рыбы,
+            являются: живец; мертвая рыба; куски рыбы; лягушка; пучок червей; выползок; куриная
+            печень; рак; креветки; пиявки; личинки насекомых. Налим может пойматься на спиннинг, но
+            это больше случайность. Как правило, налим может клюнуть в результате процесса ловли
+            такого хищника, как судак или окунь. Здесь все зависит от поведения налима, но объектом
+            спиннинговой ловли он не является, несмотря на то, что является хищником. Налим может с
+            успехом ловиться на любую наживку, входящую в этот список. Причем, это совсем не
+            означает, что все они подходят для ловли на любом водоеме. В каждом водоеме налим
+            питается по-разному, в зависимости от характера водоема, а также наличия преобладающих
+            объектов питания. На одном водоеме могут преобладать раки, а на другом обычная рыба. Не
+            трудно себе представить, что любит налим в данном случае.</item>
     </string-array>
     <array name="na_fish_image_array">
         <item>@drawable/som</item>
