--- a/app/src/main/res/menu/drawer_main_menu.xml
+++ b/app/src/main/res/menu/drawer_main_menu.xml
@@ -3,24 +3,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
     <group android:checkableBehavior="single">
-        <item android:title = "@string/fish"
-            android:id = "@+id/id_fish"
-            android:icon = "@drawable/ic_fish"/>
+        <item android:title="Основное">
+            <menu>
+                <item android:title = "@string/fish"
+                    android:id = "@+id/id_fish"
+                    android:icon = "@drawable/ic_fish"/>
 
-        <item android:title = "@string/na"
-            android:id = "@+id/id_na"
-            android:icon = "@drawable/ic_na"/>
+                <item android:title = "@string/na"
+                    android:id = "@+id/id_na"
+                    android:icon = "@drawable/ic_na"/>
 
-        <item android:title = "@string/sna"
-            android:id = "@+id/id_sna"
-            android:icon = "@drawable/ic_sna"/>
-
-        <item android:title = "@string/history"
-            android:id = "@+id/id_history"
-            android:icon = "@drawable/ic_history"/>
-
-
+                <item android:title = "@string/sna"
+                    android:id = "@+id/id_sna"
+                    android:icon = "@drawable/ic_sna"/>
+            </menu>
+        </item>
     </group>
+
+    <item android:title="Разное">
+        <menu>
+            <item android:title = "@string/history"
+                android:id = "@+id/id_history"
+                android:icon = "@drawable/ic_history"/>
+        </menu>
+    </item>
 
 
 </menu>
